# air_ground

./: .gitignore  README.md  frames.gv
src/autolabor_simulation/simulation_launch/rviz/: autolabor.rviz
src/custom_msg/: CMakeLists.txt  package.xml
src/custom_msg/msg/: DronePerception.msg  VehicleCtrlCmd.msg
src/d2v_serial/: CMakeLists.txt  package.xml
src/d2v_serial/include/serial/: cmd_vel2ackermann.h
src/d2v_serial/src/: cmd_vel2ackermann.cpp  serial_drones.cpp
src/fake_controller/: CMakeLists.txt  README.md  package.xml
src/fake_controller/include/: fake_pose_pub.hpp  fake_rc_pub.hpp
src/fake_controller/launch/: fake_rc_control.rviz  fake_rc_pub.launch
src/fake_controller/src/: fake_pose_pub.cpp  fake_rc_pub.cpp
src/my_serial/: CMakeLists.txt  package.xml
src/my_serial/include/serial/: cmd_vel2ackermann.h
src/my_serial/src/: cmd_vel2ackermann.cpp  pub_odom.cpp  pub_perception.cpp  serial_drones.cpp  serial_vehicle.cpp  virtual_map.cpp
src/psdk/: CMakeLists.txt  README.md  package.xml
src/psdk/include/: hal_uart.h  p_link.h  p_link_cmp.h  psdk_node.hpp
src/psdk/launch/: psdk.launch
src/psdk/src/: hal_uart.c  p_link.cpp  p_link_cmp.cpp  psdk_node.cpp
src/serial/: CMakeLists.txt  package.xml
src/serial/include/serial/: virtual_map.h
src/start_up/: package.xml
src/start_up/launch/: navi.launch  navigation_with_teb.launch  navigation_without_slam.launch
src/start_up/map/: 100boundary.yaml  white.yaml
src/start_up/param/: move_base_params.yaml
src/start_up/rviz/: navigation_with_teb.rviz  navigation_without_slam.rviz
src/tf_broadcast/: CMakeLists.txt  package.xml
src/tf_broadcast/include/tf_broadcast/: tf_base.h
src/tf_broadcast/launch/: tf_static.launch
src/tf_broadcast/src/: tf_base.cpp
src/x1_chassis/: README.md
src/x1_chassis/can2serial/: .gitignore  CMakeLists.txt  LOG.md  README.md  package.xml
src/x1_chassis/can2serial/example/: example.cpp
src/x1_chassis/can2serial/include/can2serial/: can2serial.h
src/x1_chassis/can2serial/launch/: driver.launch
src/x1_chassis/can2serial/src/: can2serial.cpp  msg_transmitter.cpp  test_transmitter.py
src/x1_chassis/driverless_common/: .gitignore  CMakeLists.txt  README.md  package.xml
src/x1_chassis/driverless_common/action/: DoDriverlessTask.action
src/x1_chassis/driverless_common/include/driverless_common/: common.h  data_structure.h  flags.h  gen_exlcm_headers.sh  structs.h  utils.h
src/x1_chassis/driverless_common/include/driverless_common/algorithm/: filter.h  pathplanning.h  pid_controller.h
src/x1_chassis/driverless_common/include/driverless_common/exlcm/: ConfigMsg.hpp  CustomMsg.hpp  DynamicReconfigureMsg.hpp  Object.hpp
src/x1_chassis/driverless_common/include/driverless_common/exlcm_structs/: CustomMsg.lcm  DynamicReconfigureMsg.lcm  Object.lcm
src/x1_chassis/driverless_common/include/driverless_common/tools/: costom_msg_publisher.hpp  dynamic_reconfigure.hpp  lcm_costom_msg_publisher.hpp  ros_costom_msg_publisher.hpp
src/x1_chassis/driverless_common/msg/: FaultIndication.msg  ObuBsmData.msg  ObuParsing.msg  ObuRsiData.msg  ObuRsmData.msg  ObuSend.msg  ObuSharingData.msg  README.md  RadarObject.msg  RadarObjects.msg  SensorStatus.msg  SystemState.msg  TaskModify.msg  VehicleState.msg
src/x1_chassis/driverless_common/scripts/: filter_test.py
src/x1_chassis/driverless_common/src/: utils.cpp
src/x1_chassis/driverless_common/src/algorithm/: filter.cpp  pathplanning.cpp  pid_controller.cpp
src/x1_chassis/driverless_common/src/examples/: custommsgpublihser_example.cpp  dynamicreconfigure_example.cpp  filter_example.cpp  vectorarray_example.cpp
src/x1_chassis/driverless_common/srv/: AddTask.srv
src/x1_chassis/smartcar_driver/: CMakeLists.txt  README.md  package.xml
src/x1_chassis/smartcar_driver/config/: vehicle_params.yaml
src/x1_chassis/smartcar_driver/include/smartcar_driver/: base_control_core.h  parse_function.h
src/x1_chassis/smartcar_driver/launch/: smartcar_driver.launch
src/x1_chassis/smartcar_driver/src/: base_control_core.cpp  base_control_node.cpp
